# zeebroo-pos-desktop

./: README.md
.github/scripts/: package-desktop.sh
.github/workflows/: build-deploy.yml
pos-desktop/: .gitignore  CMakeLists.txt  README.md  config.example.json
pos-desktop/resources/: resources.qrc  styles.qss
pos-desktop/src/: main.cpp
pos-desktop/src/core/: ApiClient.cpp  ApiClient.h  Cart.cpp  Cart.h  Config.cpp  Config.h  Models.cpp  Models.h  PosBeep.cpp  PosBeep.h  SaleReceipt.cpp  SaleReceipt.h
pos-desktop/src/ui/: CartLineWidget.cpp  CartLineWidget.h  LayerPickerDialog.cpp  LayerPickerDialog.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  ProductCardWidget.cpp  ProductCardWidget.h  ReceiptDialog.cpp  ReceiptDialog.h
